--- a/src/globals.css
+++ b/src/globals.css
@@ -1,6 +1,27 @@
-body{
-  background-color: #1f1c1c;
-  color: white;
-  font-family: sans-serif;
- 
+body {
+  background-image: url(assets/background.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
+  align-items: center;
+}
+
+.clock-container {
+  backdrop-filter: blur(5px);
+  width: 100vh;
+  padding: 10px 0px;
+}
+
+.clock {
+  color: wheat;
+  font-size: 50px;
+  font-weight: bold;
+  font-family: monospace;
+  text-align: center;
+  text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.74);
 }
